UAT_Backup_All_8Jan2024_0624/Backup-Source/objects/Vision_Non_Opportunity_Products__c.object
<CustomObject>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Unique_Identifier__c</fullName>
        <label>GCP Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_DRL_Act_TPT_PCT__c</fullName>
        <label>DRL Act TPT PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_Drl_Act_Price__c</fullName>
        <label>DRL Act Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Drl_Act_Sales__c</fullName>
        <label>DRL Act Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Drl_Act_TPT__c</fullName>
        <label>DRL Act TPT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Drl_Act_Volume_Eu__c</fullName>
        <label>DRL Act Volume Eu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Drl_Mkt_Sh_Act__c</fullName>
        <label>DRL Marketing Share Act</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_IMS_Drl_Mkt_Sh_Qtr__c</fullName>
        <label>IMS DRL Marketing Share  Quarter</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Vision_IMS_Mat_Month_Range__c</fullName>
        <label>IMS Mat Month Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_IMS_Mat_Sales__c</fullName>
        <label>IMS Mat Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_IMS_Mat_Volume_Eu__c</fullName>
        <label>IMS Mat Volume Eu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_IMS_Quarter_Month_Range__c</fullName>
        <label>IMS Quarter Month Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Panorama_Suggested_Price__c</fullName>
        <label>Panorama Suggested Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Prof_Month_Range__c</fullName>
        <label>Prof Month Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RX</fullName>
                </value>
                <value>
                    <fullName>SRX</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Non Opportunity Products</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GCP_Product_Family__c</columns>
        <columns>Vision_Product_Family__c</columns>
        <columns>Vision_Segment__c</columns>
        <columns>Vision_Panorama_Suggested_Price__c</columns>
        <columns>GCP_Unique_Identifier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NOP-{0000000}</displayFormat>
        <label>Non Opportunity Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Opportunity Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>